@@ -1,5 +1,11 @@
 1999-12-13  Kenichi OKADA <okada@opaopa.org>
 
+	* digest-md5.el (digest-md5-digest-response): Update.
+	(digest-md5-make-cnonce): New function.
+	(digest-md5-parse-digest-challenge): New function.
+
+1999-12-13  Kenichi OKADA <okada@opaopa.org>
+
 	* FLIM-ELS (flim-modules): Add `unique-id'.
 	* smtp.el (TopLevel): Add autoload `sasl-scram-md5'.
 
